website/websites/u64q/code/iobench.1.pyston.log

 Wed, 28 Sep 2022 09:10:02 GMT

COMMAND LINE:
 /usr/bin/pyston iobench.pyston 1

PROGRAM FAILED 


PROGRAM OUTPUT NOT CHECKED:

  File "iobench.pyston", line 6
    print func.__code__.co_name, "%d bytes, %.2fus per write" % (
          ^
SyntaxError: invalid syntax
